you know the rules and so do i

--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Nothing to see here</h1>
-<p>...yet.<img src="https://cdn.discordapp.com/emojis/812737440866369548.png?v=1" alt="trollface from exiled's discord" width="50"
-         height="50"></p>
+<iframe width="1237" height="696" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
