--- a/smod2.html
+++ b/smod2.html
@@ -32,7 +32,7 @@
         <!-- This sucks but sucks more for this to be git.io/smod2 -->
         <h2 style="padding-left: 20%; padding-right: 20%; position: relative;">ServerMod2 is a server side plugin system with a bunch of additional configuration options, bug fixes,
             security patches and some optimisations built in.</h2>
-            <a id="download-button" class="btn btn-outline-success btn-lg">Download now</button>
+            <a id="download-button" class="btn btn-outline-success btn-lg">Download now</a>
     </div>
     
 </body>
